# FractalToolkit

./: CLEANUP_LOG.md  DEVELOPMENT_PLAN.md  FIXES_SUMMARY.md  MODULARIZATION_PLAN.sh  MODULARIZATION_README.md  PROJECT_SUMMARY.md  Plan.txt  WORK_SUMMARY.md  test_advanced_formula.html  test_buddha_eta.html  test_buddha_long_eta.html  test_buddha_progress.html  test_buddhaj_eta.html  test_eta_progress.html  test_julia_advanced.html  test_julia_eta.html  test_julia_eta_long.html  test_palette1.html  test_palette2.html  test_time_based_progress.html  test_z_cubed.html
fractal-toolkit/: .gitignore  Cargo.toml  README.md  debug_orbit.rs  install.sh  lib_backup.rs  user-install.sh
fractal-toolkit/docs/: COMMANDS.md  EXAMPLES.md  HIGH_PRECISION_FEATURES.md  Monetizing_Fractal_Renders.md  README.md  high_precision.md  high_precision_tests.md
fractal-toolkit/nya_elyria/: chat_history.json  collaboration_summary.md  conversation_manager.py  deeper_exploration.py  i_sqrt_exploration.sh  interactive_session.py  simple_session.py
fractal-toolkit/src/: lib.rs
fractal-toolkit/src/complex_arithmetic/: mod.rs
fractal-toolkit/src/complex_math/: mod.rs
fractal-toolkit/src/complex_numbers/: mod.rs
fractal-toolkit/src/data_structures/: mod.rs
fractal-toolkit/src/expression_parser/: mod.rs
fractal-toolkit/src/expressions/: mod.rs
fractal-toolkit/src/formulas/: mod.rs
fractal-toolkit/src/fractal_algorithms/: mod.rs
fractal-toolkit/src/fractals/: mod.rs
fractal-toolkit/src/hyperops/: mod.rs
fractal-toolkit/src/image_utils/: mod.rs
fractal-toolkit/src/math/: mod.rs
fractal-toolkit/src/orbits/: mod.rs
fractal-toolkit/src/params/: mod.rs
fractal-toolkit/test_files/: debug_z_pow_z.rs  test_complex_exp.rs
fractal-toolkit/tests/: COMMANDS.md  README.md
(+4 files in other folders)
