[package]
name = "fractal-toolkit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ftk-mandel"
path = "src/bin/ftk-mandel.rs"

[[bin]]
name = "ftk-julia"
path = "src/bin/ftk-julia.rs"

[[bin]]
name = "ftk-buddha"
path = "src/bin/ftk-buddha.rs"

[[bin]]
name = "ftk-buddhaj"
path = "src/bin/ftk-buddhaj.rs"

[[bin]]
name = "ftk-dca"
path = "src/bin/ftk-dca.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
num-complex = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4"
special = "0.12"
chrono = "0.4"
rayon = "1.7"
num_cpus = "1.16"
rug = "1.0"

